# HARDN

./: README.md  install.sh
.github/: FUNDING.yml
.github/workflows/: insights.yml  validate.yml  version.yml
debian/: control  postinst  rules
docs/: CODE_OF_CONDUCT.md  README.md  TABLE_OF_CONTENTS.md  changelog.md
src/gui/: Cargo.toml
src/gui/src/: main.rs
src/setup/: hardn-main.sh
