[package]
name = "hardn-gui"
version = "2.0.0"
edition = "2021"
authors = ["HARDN Team"]
description = "GTK4 GUI interface for HARDN Linux Security Hardening Tool"
license = "GPL-3.0"
repository = "https://github.com/OpenSource-For-Freedom/HARDN-XDR"

[[bin]]
name = "hardn-gui"
path = "src/main.rs"

[dependencies]
gtk4 = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

[build-dependencies]
glib-build-tools = "0.17" 